TaskList/K8s/01.yaml
kind: Pod
apiVersion: v1
metadata:
  name: tasks-app
spec:
  containers:
  - name: tasks-app
    image: hossambarakat/tasklist
    imagePullPolicy: IfNotPresent
    ports:
      - containerPort: 80
