TaskList/K8s/04.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tasks-app-deployment
spec:
  replicas: 3
  selector:
      matchLabels:
        app: tasks-app
  template:
    metadata:
      labels:
        app: tasks-app
    spec:
      containers:
      - image: hossambarakat/tasklist
        imagePullPolicy: IfNotPresent
        name: tasks-app
        ports:
        - containerPort: 80
          name: tasks-app
---
kind: Service
apiVersion: v1
metadata:
  name: tasks-app-svc
spec:
  selector:
    app: tasks-app
  type: NodePort
  ports:
  - port: 8099
    targetPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
      matchLabels:
        app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql
        image: microsoft/mssql-server-linux
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1433
---
kind: Service
apiVersion: v1
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: NodePort
