TaskList/K8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /tasks-app
spec:
  rules:
  - http:
      paths:
      - path: /tasks-app
        backend:
          serviceName: tasks-app-svc
          servicePort: 8099
